feat: add mystery and response HTML files, and new images for Estación Kepler

--- a/station/control.html
+++ b/station/control.html
@@ -83,7 +83,7 @@
         </section>
 
         <dialog open>
-          <h3>⚠️ Advertencia del Sistema</h3>
+          <h3>Advertencia del Sistema</h3>
           <form method="dialog">
             <p>Acceso no autorizado detectado en el sector B. ¿Continuar con protocolo de seguridad?</p>
             <button>Aceptar riesgo y continuar</button>
