feat: add readme.md

--- a/signal/response.html
+++ b/signal/response.html
@@ -119,7 +119,7 @@
         </section>
 
         <dialog open>
-          <h3>⚠️ ALERTA CRÍTICA</h3>
+          <h3>ALERTA CRÍTICA</h3>
           <form method="dialog">
             <p>
               <strong>SISTEMA NEUROLÓGICO:</strong> Actividad cerebral anómala detectada.
