--- a/escape/pods.html
+++ b/escape/pods.html
@@ -105,7 +105,7 @@
         </section>
 
         <dialog open>
-          <h3>⚠️ Alerta de Proximidad</h3>
+          <h3>Alerta de Proximidad</h3>
           <form method="dialog">
             <p>
               Sensor de movimiento activado en el corredor principal.
